--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <div class="ms-auto navbar-nav">
-          <a class="nav-links nav-link" href="./pages/PostAJob.php">
+          <a class="nav-links nav-link" href="./PostAJob.php">
             <button type="button" class="button btn btn-primary"><strong>Post a Job</strong></button>
           </a>
           <a class="nav-links nav-link" href="../index.php">
