--- a/error/errorNavbar.html
+++ b/error/errorNavbar.html
@@ -1,5 +1,5 @@
 <nav class="green-nav navbar navbar-expand-lg navbar-dark">
-  <div class="container-fluid"><a href="../index" class="navbar-brand">newgradnomad.com</a>
+  <div class="container-fluid"><a href="../" class="navbar-brand">newgradnomad.com</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,7 +9,7 @@
           <a class="nav-links nav-link" href="../pages/PostAJob">
             <button type="button" class="button btn btn-primary"><strong>Post a Job</strong></button>
           </a>
-          <a class="nav-links nav-link" href="../index">
+          <a class="nav-links nav-link" href="../">
             <button type="button" class="button-hide btn btn-primary"><strong>Home</strong></button>
           </a>
 <!--             <div class="button-hide nav-links mt-auto mb-auto show dropdown">
