Revert "undo extension remover pt1"
This reverts commit 606a38f3c5d751c457cf3ebdc59eae8d88cefd8f.

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -1,15 +1,15 @@
 <nav class="green-nav navbar navbar-expand-lg navbar-dark">
-  <div class="container-fluid"><a href="../index.php" class="navbar-brand">newgradnomad.com</a>
+  <div class="container-fluid"><a href="../" class="navbar-brand">newgradnomad.com</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <div class="ms-auto navbar-nav">
-          <a class="nav-links nav-link" href="./PostAJob.php">
+          <a class="nav-links nav-link" href="./PostAJob">
             <button type="button" class="button btn btn-primary"><strong>Post a Job</strong></button>
           </a>
-          <a class="nav-links nav-link" href="../index.php">
+          <a class="nav-links nav-link" href="../">
             <button type="button" class="button-hide btn btn-primary"><strong>Home</strong></button>
           </a>
 <!--             <div class="button-hide nav-links mt-auto mb-auto show dropdown">
@@ -19,7 +19,7 @@
               <a data-bs-toggle="modal" data-bs-target="#newsletterModal" class="nav-links dropdown-item"><button type="button" class="button-hide btn btn-primary"><strong>Newsletter</strong></button></a>
             </div>
           </div> -->
-          <a class="nav-links nav-link" href="./about.php">
+          <a class="nav-links nav-link" href="./about">
             <button type="button" class="button-hide btn btn-primary"><strong>About</strong></button>
           </a>
         </div>
